--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -6,7 +6,8 @@
   number={1},
   pages={1--12},
   year={2018},
-  publisher={Springer}
+  publisher={Springer},
+  doi={10.1186/s12862-018-1163-8}
 }
 
 @article{tahiri2022building,
@@ -17,7 +18,8 @@
   number={13},
   pages={3367--3376},
   year={2022},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  doi={10.1101/2021.03.24.436812}
 }
 
 @article{tahiri2022IFCS,
@@ -31,7 +33,7 @@
   publisher={Springer}
 }
 
-@article{tahiri2022IFCS,
+@article{makarenkov2022,
   title={Inferring multiple consensus trees and supertrees using clustering: a review},
   author={Makarenkov, Vladimir, Barseghyan, Gayane and Tahiri, Nadia},
   journal={Data Mining is More Than Comprehensive Analysis},
@@ -47,5 +49,6 @@
   author={Tahiri, Nadia and Veriga, Andrey and Koshkarov, Aleksandr and Morozov, Boris},
   journal={Journal of Bioinformatics and Computational Biology},
   pages={2250012--2250012},
-  year={2022}
+  year={2022},
+  doi={10.1142/S0219720022500123}
 }
